--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <div class="intro">
                 <div>
                     <span class="welcome-title">SUVASH KUMAR</span>
-                    <p class="welcome-subtitle">Undargraduate Student</p>
+                    <p class="welcome-subtitle">Deep Learning Enthusiast</p>
                     <p class="welcome-text">Welcome to my corner of the web! I'm Suvash Kumar, a computer science and engineering undergrad who loves Python and solving problems. Right now, I'm diving into deep learning and electromyographic signals. Join me as I explore this exciting world where technology meets human interaction. Let's shape the future together, one code at a time!</p>
-                    <a href="#"><button class="resume-button">My Resume</button></a><a href="#"><button>Contact Me</button></a>
+                    <a href="#"><button class="resume-button">My Resume</button></a><a href="#"><button class="contact-button">Contact Me</button></a>
                 </div>
             </div>
         </div>
