--- a/pages/about.html
+++ b/pages/about.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/nav.css">
-    <link rel="stylesheet" href="../styles/footer.css">
-    <title>About | Suvash Kumar</title>
+    <link rel="stylesheet" href="/styles/nav.css">
+    <link rel="stylesheet" href="/styles/footer.css">
+    <link rel="stylesheet" href="/styles/about.css">
+    <link rel="stylesheet" href="/fontawesome/css/font-awesome.min.css">
+    <title>Home</title>
 </head>
 
 <body>
@@ -15,35 +17,94 @@
         <p class="logo">SUVASH <span class="last-name">KUMAR</span></p>
         <nav>
             <ul class="nav-links">
-                <li><a href="/">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
+                <li><a href="/pages/about.html"><i class="fa fa-address-card"></i> About</a></li>
                 <!-- <li><a href="#">Education</a></li> -->
-                <li><a href="#">Projects</a></li>
+                <li><a href="#"><i class="fa fa-code"></i> Projects</a></li>
                 <!-- <li><a href="#">Contact Me</a></li> -->
             </ul>
         </nav>
-        <a class="btn" href="#"><button>Contact Me</button></a>
+        <a class="btn" href="#"><button><i class="fa fa-message"></i>Contact Me</button></a>
     </header>
 
     <!-- navbar end -->
 
     <!-- content start -->
-    <div class="content" style="height: 100px;">
+    <div class="content">
+        <div class="about-me">
+            <div class="about-me-title">About Me<hr></div>
+            <div class="about-me-text">
+                <p>Greetings! I'm Suvash Kumar, an enthusiastic final-year B.Sc. Engineering student deeply committed to pushing the boundaries of technology. My journey has been an exhilarating blend of academic excellence and hands-on experience, all centered around my passions: electromyographic (EMG) pattern recognition, data science, and artificial intelligence.</p>
+            </div>
+        </div>
 
+        <div class="skill">
+            <div class="skill-title"><p>Skills</p><hr></div>
+            <div class="skill-tag">
+                <div>Python</div>
+                <div>C/C++</div>
+                <div>Deep Learning</div>
+                <div>HTML+CSS</div>
+                <div>Wordpress</div>
+                <div>Ubuntu</div>
+                <div>Digitalocean</div>
+                <div>Laravel</div>
+                <div>NodeJS</div>
+                <div>MongoDB</div>
+                <div>MYSql</div>
+            </div>
+            <div class="skill-tag">
+                <div>Java</div>
+                <div>Javascript</div>
+                <div>Java</div>
+                <div>Electromyography</div>
+                <div>Signal Processing</div>
+                <div>Django</div>
+                <div>PyQt5</div>
+                <div>Java Spring</div>
+                <div>Java Swing</div>
+            </div>
+        </div>
+
+        <div class="education">
+            <div class="edu-title"><p>Education</p><hr></div>
+            <div class="edu-schools">
+                <div>
+                    <p class="degree">B. Sc. Engineering</p>
+                    <p class="subject">Computer Science and Engineering</p>
+                    <p class="institute">University of Rajshahi</p>
+                    <p class="year">2019-2024</p>
+                </div>
+                <div>
+                    <p class="degree">Higher Secondary School Certificate (HSC)</p>
+                    <p class="subject">Science Group</p>
+                    <p class="institute">Rajshahi Govt. City Collage, Rajshahi</p>
+                    <p class="year">2015-2017</p>
+                </div>
+                <div>
+                    <p class="degree">Secondary School Certificate (SSC)</p>
+                    <p class="subject">Science Group</p>
+                    <p class="institute">Belgharia High School, Durgapur, Rajshahi</p>
+                    <p class="year">2015</p>
+                </div>
+            </div>
+
+        </div>
     </div>
     <!-- content end -->
 
     <!-- footer start -->
     <footer>
         <ul class="footer-links">
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Email</a></li>
-            <li><a href="#">Linkedin</a></li>
+            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fa fa-github"></i></a></li>
         </ul>
         <p>Copyright @ Suvash Kumar, 2024</p>
     </footer>
     <!-- footer end -->
-
 </body>
 
 </html>
