--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
                 <li><a href="pages/about.html"><i class="fa fa-address-card"></i> About</a></li>
                 <!-- <li><a href="#">Education</a></li> -->
-                <li><a href="#"><i class="fa fa-code"></i> Projects</a></li>
+                <li><a href="/pages/projects.html"><i class="fa fa-code"></i> Projects</a></li>
                 <!-- <li><a href="#">Contact Me</a></li> -->
             </ul>
         </nav>
