--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/styles/footer.css">
     <link rel="stylesheet" href="/styles/about.css">
     <link rel="stylesheet" href="/fontawesome/css/font-awesome.min.css">
-    <title>Home</title>
+    <title>About Me | Suvash Kumar</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
                 <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
                 <li><a href="/pages/about.html"><i class="fa fa-address-card"></i> About</a></li>
                 <!-- <li><a href="#">Education</a></li> -->
-                <li><a href="#"><i class="fa fa-code"></i> Projects</a></li>
+                <li><a href="/pages/projects.html"><i class="fa fa-code"></i> Projects</a></li>
                 <!-- <li><a href="#">Contact Me</a></li> -->
             </ul>
         </nav>
